# WebsiteParserBot

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  run_bot.py
data/exel_files/: example_document.xlsx
parsing/: config.py  database.py  models.py  url_parsers.py  utils.py
parsing/migrations/: env.py
parsing/migrations/versions/: 1cd5eb0da33b_.py
telegram_bot/: bot.py  core.py  handlers.py  keyboards.py  states.py
