[project]
name = "websiteparserbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Cosmic Onyx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiogram (>=3.20.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=5.3.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
